# project-manager-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  app.res  build.rs  prjmng.toml
.VSCodeCounter/2023-12-02_18-28-52/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
csrc/: icon.c
src/: clib.rs  lib.rs  main.rs
src/settings/: editor.rs  mod.rs
ui/: chooser.slint  hbutton.slint  menus.slint  status.slint  ui.slint
