[package]
name = "project-manager"
version = "0.1.0"
authors = ["Haok224 <78055710+Haok224@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "s"
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3.0"
winapi = { version = "0.3.9", features = ["winuser"] }


[build-dependencies]
slint-build = "1.0"
cc = "1.0.83"
