[package]
authors = ["Haok224 <78055710+Haok224@users.noreply.github.com>"]
build = "build.rs"
edition = "2021"
name = "project-manager"
version = "0.1.0-0.1.0"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev]
panic = "unwind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfd = "0.0.4"
slint = "1.3.0"
toml = "0.8.8"
winapi = {version = "0.3.9", features = ["winuser"]}

[build-dependencies]
chrono = "0.4"
slint-build = "1.3.0"
